# frappe-pre-commit-hooks

./: .editorconfig  .example-pre-commit-config.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: __init__.py  check_version.py
